<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_18sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="@dimen/_40sdp"
            android:text="@string/lien_he"
            android:textColor="@color/md_black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/ivThoat"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="end"
            android:src="@drawable/ic_close"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:textColor="@color/md_black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_black"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/md_black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_black"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center">

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:text="@string/thoat"
            android:textColor="@color/md_white"
            android:textAllCaps="false"
            android:backgroundTint="@color/color_blue"/>

        <Button
            android:id="@+id/btnLuu"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/luu"
            android:textColor="@color/md_white"
            android:textAllCaps="false"
            android:backgroundTint="@color/color_blue"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnXoa"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/xoa"
        android:textColor="@color/md_white"
        android:textAllCaps="false"
        android:backgroundTint="@color/color_red"/>

</LinearLayout>