<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/textColorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".screen.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/activity_home_title"
            android:textColor="@color/md_black"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/llNoContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_contact"
                    tools:ignore="ContentDescription" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="55dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_home_no_contact"
                    android:textColor="@color/md_black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/svListContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvListContact"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </RelativeLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:backgroundTint="@color/color_blue"
        android:text="@string/activity_home_register"
        android:textAllCaps="false"
        android:textColor="@color/md_white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnAddContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_gravity="bottom"
        android:text="@string/activity_home_add_contact"
        android:textAllCaps="false"
        android:textColor="@color/md_white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:backgroundTint="@color/color_blue"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/btnRemoveDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:backgroundTint="@color/color_blue"
        android:text="@string/activity_home_remove"
        android:textAllCaps="false"
        android:textColor="@color/md_white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txtID"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/md_black"
        android:textSize="15sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/edtID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/md_black"
        android:textSize="15sp"
        android:inputType="none"
        android:textIsSelectable="true"
        tools:ignore="Autofill,LabelFor" />

</LinearLayout>